data/derived/sp14/progs/unify/prog2123.ml.out
Characters 59-67:
  | (h::t) -> h (pipe t);;
                ^^^^^^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b
